--- a/coding.css
+++ b/coding.css
@@ -7,7 +7,9 @@
 .titlediv{
   background-color: rgba(5, 5, 5, 0.8);
   box-shadow: 0px -2px 2px rgba(0,0,0,0.7);
-  margin-right: 444px;
+  margin: 0 300px 0 300px;
+  align: center;
+  text-align: center;
 }
 .h2{
   background-color: rgba(5, 5, 5, 0.8);
