--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@
   background-color: #00ff00;
 }
 body{
-background-image: url('1010.jpg');
+background-image: url('background.jpg');
 }
 ul{
   list-style-type: none;
